--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -11,7 +11,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-
+   
    <title>TartamIA</title>
 </head>
 <body id="login">
@@ -38,19 +38,19 @@
                         <h5 class="fw-normal mb-3 pb-3 labelFLS" style="letter-spacing: 1px;">Inicia sesión en tu cuenta</h5>
       
                         <div data-mdb-input-init class="form-outline mb-4 labelFL ">
-                          <input type="email" id="form2Example17" class="form-control form-control-lg" name="username" />
+                          <input type="email" id="correo" class="form-control form-control-lg" name="correo" required/>
                           <label class="form-label " for="form2Example17">Email </label>
                         </div>
       
                         <div data-mdb-input-init class="form-outline mb-4 labelLogin labelFL">
-                          <input type="password" id="form2Example27" class="form-control form-control-lg"  name="password"/>
+                          <input type="password" id="password" class="form-control form-control-lg"  name="password" required/>
                           <label class="form-label" for="form2Example27">Contraseña</label>
                         </div>
 
                                             
       
                         <div class="pt-1 mb-4 opciones">
-                          <button   id="btnLogin" class="btn btn-dark btn-lg btn-block " type="submit">Login</button>
+                          <button   id="btnLogin" class="btn btn-dark btn-lg btn-block " type="submit" onclick="handleSubmitForm()">Login</button>
                         </div>
 
                         <p id="error-message" style="color: red; display: none;"></p>
