--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -30,26 +30,26 @@
                         <div class="row">
                             <div class="col-md-6 mb-4">
                                 <div class="form-outline">
-                                    <input type="text" id="username" class="form-control"  name="username"/>
+                                    <input type="text" id="username" class="form-control"  name="nombre"/>
                                     <label class="form-label" for="form3Example1">Nombre</label>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="form-outline">
-                                    <input type="text" id="full_name" class="form-control" name="full_name" />
+                                    <input type="text" id="full_name" class="form-control" name="apellido" />
                                     <label class="form-label" for="form3Example2">Apellido</label>
                                 </div>
                             </div>
                         </div>
 
                         <div class="form-outline mb-4">
-                          <input type="tel" id="numTel" class="form-control" name="phone_number"/>
+                          <input type="tel" id="numTel" class="form-control" name="celular"/>
                           <label class="form-label" for="form3Example4">Número de teléfono</label>
                       </div>
 
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control" name="email" />
+                            <input type="email" id="email" class="form-control" name="correo" />
                             <label class="form-label" for="form3Example3">Email</label>
                         </div>
 
@@ -60,7 +60,7 @@
 
                         
 
-                        <button id="registerBtn" type="submit">
+                        <button id="registerBtn" onclick="handleSubmitForm()">
                           Regístrate
                         </button>
 
