--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -11,7 +11,13 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-   
+  <!-- SweetAlert2 CSS -->
+   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+
+<!-- SweetAlert2 JS -->
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+
+   <script src="/static/scripts/script_login.js" defer></script>
    <title>TartamIA</title>
 </head>
 <body id="login">
@@ -50,10 +56,12 @@
                                             
       
                         <div class="pt-1 mb-4 opciones">
-                          <button   id="btnLogin" class="btn btn-dark btn-lg btn-block " type="submit" onclick="handleSubmitForm()">Login</button>
+                          <button   id="btnLogin" class="btn btn-dark btn-lg btn-block " type="submit" >Login</button>
+
                         </div>
 
                         <p id="error-message" style="color: red; display: none;"></p>
+
 
 
                         
