--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -10,6 +10,11 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+   <!-- SweetAlert2 CSS -->
+   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+
+<!-- SweetAlert2 JS -->
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
    <script src="/static/scripts/script_register.js" defer></script>
 
    <title>TartamIA</title>
@@ -60,7 +65,7 @@
 
                         
 
-                        <button id="registerBtn" onclick="handleSubmitForm()">
+                        <button id="registerBtn" type="submit">
                           Regístrate
                         </button>
 
