--- a/Frontend/templates/form.html
+++ b/Frontend/templates/form.html
@@ -58,12 +58,11 @@
 
       <div id="popup" style="display:none;">
         <h3>Selecciona una imagen:</h3>
-        <div id="imageOptions">
-
-        </div>
+        <div id="imageOptions"></div>
         <button onclick="closePopup()">Cerrar</button>
         <button id="whatsappBtn" style="display:none;" onclick="redirectToWhatsApp()">Enviar por WhatsApp</button>
     </div>
+    
 
   </div>
 
