--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -16,6 +16,7 @@
 <!-- SweetAlert2 JS -->
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
    <script src="/static/scripts/script_register.js" defer></script>
+   
 
    <title>TartamIA</title>
 </head>
@@ -71,6 +72,7 @@
 
                        
                     </form>
+                    <script src="/static/scripts/script_b2.js" ></script>
                 </div>
             </div>
         </div>
