Agregacion de la interaccion con cliente y pastelero, creacion de la tabla pedido

--- a/Frontend/templates/cliente/home.html
+++ b/Frontend/templates/cliente/home.html
@@ -1,5 +1,5 @@
 <!-- templates/home.html -->
-{% extends "index.html" %}
+{% extends "nav_cliente.html" %}
 
 {% block head %}
 <link rel="stylesheet" href="/static/styles/style_home.css">
