--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -64,6 +64,14 @@
                             <label class="form-label" for="form3Example4">Contraseña</label>
                         </div>
 
+                        <div class="form-outline mb-4">
+                            <label for="userType">Tipo de usuario:</label>
+                            <select name="userType" id="userType" class="form-control">
+                                <option value="cliente" selected>Cliente</option>
+                                <option value="pastelero">Pastelero</option>
+                            </select>
+                        </div>
+
                         
 
                         <button id="registerBtn" type="submit">
