--- a/Frontend/templates/cliente/home.html
+++ b/Frontend/templates/cliente/home.html
@@ -37,13 +37,13 @@
                             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="imgO" src="../static/images/I1.png" class="d-block w-100" alt="...">
+                                        <img class="imgO" src="https://cdn.leonardo.ai/users/5bfc2703-f4a1-4594-af71-4979b37152e1/generations/694130a5-595e-40f2-b03e-d5a8d2a6e7d2/Leonardo_Phoenix_10_Generate_an_image_of_a_cake_with_the_follo_3.jpg" class="d-block w-100" alt="...">
                                     </div> 
                                     <div class="carousel-item">
-                                        <img class="imgO" src="../static/images/I2.png" class="d-block w-100" alt="...">
+                                        <img class="imgO" src="https://cdn.leonardo.ai/users/5bfc2703-f4a1-4594-af71-4979b37152e1/generations/561a9b93-7570-4399-bae0-e5ead2a903e4/Leonardo_Phoenix_10_Generate_an_image_of_a_cake_with_the_follo_3.jpg" class="d-block w-100" alt="...">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="imgO" src="../static/images/I3.png" class="d-block w-100" alt="...">
+                                        <img class="imgO" src="https://cdn.leonardo.ai/users/5bfc2703-f4a1-4594-af71-4979b37152e1/generations/95980c9b-3ce1-4d52-8817-cd76a6382bd3/Leonardo_Phoenix_10_Generate_an_image_of_a_cake_with_the_follo_3.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                             </div>
