--- a/Frontend/templates/cliente/nav_cliente.html
+++ b/Frontend/templates/cliente/nav_cliente.html
@@ -28,19 +28,17 @@
 
            <ul class="opciones">
               
-               <li><button id="productsBtn"><img class="imgNav" src="/static/images/producto.png">Productos</button></li>
+              
                
                <nav id="menu">
                 <ul>
                   <li class="dropdown">
                     <button id="dropdownBtn" class="opcionesC">
-                      <img class="imgNav" src="/static/images/confi.png" alt="Configuración">
+                      <img class="imgNav" src="/static/images/profile.png" alt="Configuración">
                     </button>
                     <!-- Menú desplegable -->
                     <div class="dropdown-content">
-                      <a href="/profile/">
-                        <img class="imgNav" src="/static/images/profile.png" alt="Perfil">Perfil
-                      </a>
+                      
                       <a href="/">
                         <img class="imgNav" src="/static/images/logOut.png" alt="Cerrar sesión">Cerrar sesión
                       </a>
