--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -41,7 +41,7 @@
                           <span  class="h1 fw-bold mb-0 titulo">TartamIA</span>
                         </div>
       
-                        <h5 class="fw-normal mb-3 pb-3 labelFLS" style="letter-spacing: 1px;">Inicia sesión en tu cuenta</h5>
+                        <h5 id="labelFLS">Inicia sesión en tu cuenta</h5>
       
                         <div data-mdb-input-init class="form-outline mb-4 labelFL ">
                           <input type="email" id="correo" class="form-control form-control-lg" name="correo" required/>
@@ -66,8 +66,8 @@
 
                         
                        <!-- <a class="small text-muted" href="#!">¿Has olvidado tu contraseña?</a> -->
-                        <p  class="mb-5 pb-lg-2 class-R labelLogin labelFLS" >¿No tienes una cuenta? 
-                            <a class="labelFLS" href="/register/">Regístrate aquí</a></p>
+                        <p id="labelFLS" >¿No tienes una cuenta? 
+                            <a id="labelFLS" class="labelFLS" href="/register/">Regístrate aquí</a></p>
                        
                       </form>
       
