--- a/Frontend/templates/pastelero/nav_pastelero.html
+++ b/Frontend/templates/pastelero/nav_pastelero.html
@@ -20,33 +20,24 @@
    <header>
        <nav class="navbar">
            <div class="logo">
-             <a href="/pastelero/panel" class="homeRef">
+             
                <img class="imgLogo" src="/static/images/LOGOT.png"/>
                <span class="titulo">TartamIA</span>
-             </a>  
+             
            </div>
 
            <ul class="opciones">
-              
-               <li><button id="dashboardBtn"><img class="imgNav" src="/static/images/dashboard.png">Panel</button></li>
-
-               <!-- Menú de productos para el pastelero -->
-               <li><button id="productsBtn"><img class="imgNav" src="/static/images/producto.png">Gestionar Productos</button></li>
-               
-               <!-- Menú de pedidos para el pastelero -->
-               <li><button id="ordersBtn"><img class="imgNav" src="/static/images/pedido.png">Pedidos</button></li>
+             
                
                <nav id="menu">
                 <ul>
                   <li class="dropdown">
                     <button id="dropdownBtn" class="opcionesC">
-                      <img class="imgNav" src="/static/images/confi.png" alt="Configuración">
+                      <img class="imgNav" src="/static/images/profile.png" alt="Configuración">
                     </button>
                     <!-- Menú desplegable -->
                     <div class="dropdown-content">
-                      <a href="/pastelero/profile/">
-                        <img class="imgNav" src="/static/images/profile.png" alt="Perfil">Perfil
-                      </a>
+                      
                       <a href="/login/">
                         <img class="imgNav" src="/static/images/logOut.png" alt="Cerrar sesión">Cerrar sesión
                       </a>
