--- a/Frontend/static/styles/style_form.css
+++ b/Frontend/static/styles/style_form.css
@@ -13,6 +13,25 @@
     align-items: center; 
 }
 
+ button {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    align-content: center;
+    padding: 10px 15px;
+    background-color: #3d0c08; /* Color azul tipo botón */
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.2s;
+    margin-right: 5px;
+    font-family: 'Slabo 27px', serif;
+    
+}
+.cakeForm{
+    color: #3d0c08;
+    font-family: 'Slabo 27px', serif;
+    font-size: 18px;
+    font-weight: bold;
+}
 
 
 .container {
@@ -30,6 +49,10 @@
 
 }
 
+button:hover {
+    background-color: #3d0c0892; /* Azul más oscuro al pasar el mouse */
+    transform: scale(1.05); /* Efecto de agrandado */
+}
 
 
 .labelForm {
@@ -76,12 +99,7 @@ select {
 #submitBtn:hover {
     background: #a0522d; /* Marrón oscuro */
 }
-.clas-i{
-    color: #25a144;
-}
-.main-content {
-    flex-grow: 1 !important; 
-}
+
 .section{
     margin-bottom: 10px; 
 }
